k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edufarm
  labels:
    name: edufarm
    environment: production
